--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.outline-border { 
+    width: 400px;
+    padding: 20px;
+    border-top: 10px solid #47c465;
+    border-bottom:10px solid #00deff;
+    background-image: 
+        linear-gradient(#47c465, #00deff),
+        linear-gradient(#47c465, #00deff)
+    ;
+    background-size:10px 100%;
+    background-position:0 0, 100% 0;
+    background-repeat:no-repeat;
+}
